Add demographics section

--- a/browser/navbar.html
+++ b/browser/navbar.html
@@ -41,7 +41,7 @@
               <li><a href="mls.html">basic</a></li> 
               <!--<li><a href="mls-companies.html">by companies</a></li>-->
               <!--<li><a href="mls-countries.html">by countries</a></li>-->
-              <li><a href="mls-repos.html">by repositories</a></li>
+              <li><a href="mls-repos.html">by mailing lists</a></li>
           </ul>                                   
          </li>
 <!--         <li class="dropdown scr-menu">
@@ -57,14 +57,14 @@
               <li><a href="irc.html">basic</a></li>
               <li><a href="irc-repos.html">Repositories</a></li> 
           </ul>
-         </li> 
+         </li>--> 
          <li class="dropdown studies-menu">        
          <a class="dropdown-toggle" data-toggle="dropdown" href="">Studies<b class="caret"></b></a>
          <ul class="dropdown-menu">
-           <li><a href="../dashboard">Actionable dashboard</a></li>         
+           <!--<li><a href="../dashboard">Actionable dashboard</a></li>-->         
            <li><a href="demographics.html">Demographics</a></li>
          </ul>
-         </li>-->
+         </li>
          <li><a href="http://bitergia.com"><img src="bitergia-logo.png" 
             alt="Bitergia logo" id="logo" height="45" width="90" border=0></a></li>
        </ul>
