Update HTML + VizGrimoireJS library

--- a/browser/demographics.html
+++ b/browser/demographics.html
@@ -31,8 +31,8 @@
 	                   in the different data sources.
 	                   </i></p>
 
-	                <p><i>Horizontal bars represent periods of three months where the 0 bar
-	                   shows information of the last three months.</i></P>
+	                <p><i>Horizontal bars represent periods of six months where the 0 bar
+	                   shows information of the last six months.</i></P>
 
 	                <p><i>Big bars on top would mean that old contributors are still active. Big
                         bars at the bottom would mean that new contributors are being retained.</i></p>
@@ -62,9 +62,9 @@
                 <div class="row-fluid">
                     <div class="span3">
                     <p><i><b>Birth</b> charts show the number of contributors joining
-	                   the community each three months.</i></p>
-	                <p><i>Horizontal bars represent periods of three months where the 0 bar
-	                   shows information of the last three months.</i></P>
+	                   the community each six months.</i></p>
+	                <p><i>Horizontal bars represent periods of six months where the 0 bar
+	                   shows information of the last six months.</i></P>
 	                <p><i>Biggers bars on top would mean that your community attracted more
 	                    people. Bigger bars at the bottom would mean that your community is 
 	                    attracting more people lately.</i></p>
@@ -91,7 +91,13 @@
             </div>
            
 
-             <footer>
+            <div class="row-fluid" style="margin-top:10px;">
+                <div class="span12">
+                    <div id="Refcard"></div>
+                </div>
+            </div>
+
+            <footer>
                 <div id="Footer"></div>
             </footer>
         </div>
