--- a/browser/scm-repository.html
+++ b/browser/scm-repository.html
@@ -45,9 +45,15 @@
         </div>
       </div>
     </div>
-    <footer>
-      <div id="footer"></div>
-    </footer>
+            <div class="row-fluid" style="margin-top:10px;">
+                <div class="span12">
+                    <div id="Refcard"></div>
+                </div>
+            </div>
+
+            <footer>
+                <div id="Footer"></div>
+            </footer>
   </div>
 
   <script type="text/javascript" src="VizGrimoireJS/lib/jquery-1.7.1.min.js"></script>
