--- a/browser/irc-repos.html
+++ b/browser/irc-repos.html
@@ -1,74 +1,111 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta charset="utf-8">
-<title></title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" id="theme"
-  href="VizGrimoireJS/vizgrimoire.css" />
-<link href="VizGrimoireJS/bootstrap/css/bootstrap.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="custom.css" />
-<link href="VizGrimoireJS/bootstrap/css/bootstrap-responsive.css"
-  rel="stylesheet">
-<link rel="shortcut icon" href="favicon.png">
-</head>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta charset="utf-8"/>
+        <title></title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" type="text/css" id="theme"
+              href="VizGrimoireJS/vizgrimoire2.css"/>
+        <link href="VizGrimoireJS/bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link rel="stylesheet" type="text/css" href="custom.css"/>
+        <link href="VizGrimoireJS/bootstrap/css/bootstrap-responsive.css"
+              rel="stylesheet"/>
+        <link rel="shortcut icon" href="favicon.png"/>
+    </head>
 
-<body>
-  <div id="navbar"></div>
-  <div class="container-fluid">
-    <div id="info" class="row-fluid">
-      <h4>Information about all repositories</h4>
-      Some charts and tables for top repositories in the project, and a summary
-      of the evolution of their participation with links to more detailed
-      information per repository.
-    </div>
-    <!--/row-->
-    <!--       <div id="summary-evol" class="row-fluid">
-        <div class="span6">
-		<div class="irc-flotr2-metrics" data-metrics="irc_repositories" data-legend="false"></div>
-		<i><b>Active repositories per month</b></i><a href="notes.html#note:charts:repositories"><img src="qm_15.png"></a>
-		</div>
-		<div class="span6">       		
-		<div id="irc-repos-summary"></div>
-		</div>      
-      </div>/row
- -->
-    <div id="summary-static" class="row-fluid">
-      <div class="span6">
-        <div class="irc-flotr2-repos-static" data-metric="irc_sent"
-          data-limit="10" data-order-by="irc_sent"></div>
-        <i><b>Sent per repository (aggregated)</b><a
-          href="notes.html#note:charts:repositories:sent"> <img
-            src="qm_15.png"></a></i>
-      </div>
-      <div class="span6">
-        <div class="irc-flotr2-repos-static" data-metric="irc_senders"
-          data-limit="10" data-order-by="irc_sent"></div>
-        <i><b>Senders per repository (aggregated)</b><a
-          href="notes.html#note:charts:repositories:senders"> <img
-            src="qm_15.png"></a></i>
-      </div>
-    </div>
-    <!--/row-->
-    <div id="nav" class="row-fluid">
-      <h4 style="font-weight: bold;">List of repositories</h4>
-      <div id="irc-flotr2-repos-nav" data-order-by="irc_sent"></div>
-    </div>
-    <!--/row-->
-    <div id="list" class="row-fluid">
-      <div class="irc-flotr2-repos-list" data-metrics="irc_sent,irc_senders"
-        data-order-by="irc_sent""></div>
-    </div>
-    <!--/row-->
-    <footer>
-      <div id="footer"></div>
-    </footer>
-  </div>
-  <!--/.fluid-container-->
+    <body>
+        <div class="container-narrow">
+            <div id="Navbar"></div>
 
-  <script type="text/javascript" src="VizGrimoireJS/lib/jquery-1.7.1.min.js"></script>
-  <script type="text/javascript" src="VizGrimoireJS/bootstrap/js/bootstrap.js"></script>
-  <script type="text/javascript" src="VizGrimoireJS/vizgrimoire.min.js"></script>
-</body>
+            <div class="row-fluid"><h4>Information about all channels</h4></div>
+            <!-- info text -->
+            <div id="info" class="row-fluid">
+                <div class="span5">
+                    Some charts and tables for top channels in the project, and a summary
+                    of the evolution of their participation with links to more detailed
+                    information per channel.
+                </div>
+                <div class="span7">
+                    <!-- evolution #channels -->
+                    <i>
+                        <b>Active Channels per month</b>
+                    </i>
+                    <div class="MetricsEvol" data-data-source="irc"
+                         data-metrics="irc_channels" data-legend="false" style="height: 80px;"></div>
+                </div>
+            </div>
+            <!-- end info text -->           
+
+
+            <!-- list of channels -->
+            <div id="nav" class="row-fluid">
+                <div class="FilterItemsNav" data-data-source="irc"
+                     data-order-by="irc_sent" data-filter="repos" style="align: center"></div>                  
+            </div>
+            <!-- end list of channels -->
+
+
+            <!-- sent, senders channel -->
+            <div class="well">
+                <div id="summary-static" class="row-fluid">
+                    <!-- sent -->
+                    <div class="span1"></div>
+                    <div class="span4">
+                        <i>
+                            <b>Messages per channel (aggregated)</b>
+                        </i>
+                        <div class="FilterItemsGlobal" data-data-source="irc"
+                             data-metric="irc_sent" data-filter="repos"
+                             data-legend-div="repos_legend" data-limit="10"
+                             data-order-by="irc_sent">
+                        </div>
+                    </div>
+                    <!-- end sent -->
+
+                    <div class="span2" id="repos_legend"></div>
+
+                    <!-- senders -->
+                    <div class="span4">
+                        <i>
+                            <b>Senders per channel (aggregated)</b>
+                        </i>
+                        <div class="FilterItemsGlobal" data-data-source="irc"
+                             data-metric="irc_senders" data-filter="repos"
+                             data-legend="false" data-limit="10"
+                             data-order-by="irc_sent"></div>
+                    </div>
+                    <!-- end senders -->
+                    <div class="span1"></div>
+                </div>
+            </div>
+            <!-- end sent, senders channel -->
+            
+            <div id="summary-static" class="row-fluid"></div>
+
+            <!-- sent per channel -->
+            <div id="list" class="row-fluid">
+                <div class="FilterItemsMiniCharts" data-data-source="irc"
+                     data-metrics="irc_sent,irc_senders" data-filter="repos"
+                     data-order-by="irc_sent">
+                </div>
+            </div>
+            <!-- end sent per channel -->
+
+            <div class="row-fluid" style="margin-top:10px;">
+                <div class="span12">
+                    <div id="Refcard"></div>
+                </div>
+            </div>
+
+            <footer>
+                <div id="Footer"></div>
+            </footer>
+        </div>
+
+        <script type="text/javascript" src="VizGrimoireJS/lib/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="VizGrimoireJS/bootstrap/js/bootstrap.js"></script>
+        <script type="text/javascript" src="VizGrimoireJS/vizgrimoire2.min.js"></script>
+    </body>
 </html>
