--- a/browser/radar.html
+++ b/browser/radar.html
@@ -1,59 +1,47 @@
 <!DOCTYPE html>
 
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<html lang="en">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta charset="utf-8"/>
+        <title></title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" type="text/css" id="theme"
+              href="VizGrimoireJS/vizgrimoire2.css"/>
+        <link href="VizGrimoireJS/bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link rel="stylesheet" type="text/css" href="custom.css"/>
+        <link href="VizGrimoireJS/bootstrap/css/bootstrap-responsive.css"
+              rel="stylesheet"/>
+        <link rel="shortcut icon" href="favicon.png"/>
+    </head>
 
-    <link rel="stylesheet" type="text/css" id="theme" href="VizGrimoireJS/vizgrimoire.css" />
-    <link href="VizGrimoireJS/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .sidebar-nav {
-        padding: 9px 0;
-      }
-    </style>
-    <link href="VizGrimoireJS/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="custom.css" />    
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
-    <![endif]-->
+    <body>
+        <div class="container-narrow">
+            <div id="Navbar"></div>
 
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://twitter.github.io/bootstrap/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://twitter.github.io/bootstrap/assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.io/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="http://twitter.github.io/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="favicon.png">
-  </head>
+            <div class="container-fluid">
+                <div class="row-fluid">
+                    <div class="span12">
+                        <h4>Activity</h4>
+                        <div id="RadarActivity" class="radar"></div>
+                    </div>
+                </div>
 
-  <body>
-    <div id="navbar"></div>
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span12">
-            <h4>Activity</h4>
-            <div id="radar-activity" class='radar'></div>
+                <div class="row-fluid">
+                    <div class="span12">
+                        <h4>Community</h4>
+                        <div id="RadarCommunity" class="radar"></div>
+                    </div>
+                </div>
+            </div>
+
+            <footer>
+                <div id="Footer"></div>
+            </footer>
         </div>
-      </div><!--/row-->
-      <div class="row-fluid">
-        <div class="span12">
-            <h4>Community</h4>
-            <div id="radar-community" class='radar'></div>
-        </div>
-      </div><!--/row-->
-      <footer>
-        <div id="footer"></div>
-      </footer>
-    </div><!--/.fluid-container-->
 
-    <script type="text/javascript" src="VizGrimoireJS/lib/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="VizGrimoireJS/bootstrap/js/bootstrap.js"></script>
-   <script type="text/javascript" src="VizGrimoireJS/vizgrimoire.min.js"></script>                    
-</body></html>
+        <script type="text/javascript" src="VizGrimoireJS/lib/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="VizGrimoireJS/bootstrap/js/bootstrap.js"></script>
+        <script type="text/javascript" src="VizGrimoireJS/vizgrimoire2.min.js"></script>
+    </body>
+</html>
