--- a/browser/scm-country.html
+++ b/browser/scm-country.html
@@ -1,50 +1,59 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta charset="utf-8">
-<title></title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" id="theme"
-  href="VizGrimoireJS/vizgrimoire.css" />
-<link href="VizGrimoireJS/bootstrap/css/bootstrap.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="custom.css" />
-<link href="VizGrimoireJS/bootstrap/css/bootstrap-responsive.css"
-  rel="stylesheet">
-<link rel="shortcut icon" href="favicon.png">
-</head>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta charset="utf-8"/>
+        <title></title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" type="text/css" id="theme"
+              href="VizGrimoireJS/vizgrimoire2.css"/>
+        <link href="VizGrimoireJS/bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link rel="stylesheet" type="text/css" href="custom.css"/>
+        <link href="VizGrimoireJS/bootstrap/css/bootstrap-responsive.css"
+              rel="stylesheet"/>
+        <link rel="shortcut icon" href="favicon.png"/>
+    </head>
 
-<body>
-  <div id="navbar"></div>
-  <div class="container-fluid">
-    <div class="row-fluid">
-      <div class="span2">
-        <div id="scm-refcard-country"></div>
-      </div>
-      <div class="span7">
-        <div class="row-fluid">
-          <div class="scm-flotr2-metrics-country" data-metrics="scm_commits"
-            data-legend="false"></div>
-          <i><b>Closed tickets per month</b></i> <a
-            href="notes.html#note:charts:countries:commits"><img
-            src="qm_15.png"></a>
-        </div>
-        <div class="row-fluid">
-          <div class="scm-flotr2-metrics-country" data-metrics="scm_authors"
-            data-legend="false"></div>
-          <i><b>Authors per month</b></i> <a
-            href="notes.html#note:charts:countries:authors"><img
-            src="qm_15.png"></a>
-        </div>
-      </div>
-    </div>
-    <footer>
-      <div id="footer"></div>
-    </footer>
-  </div>
+    <body>
+        <div class="container-narrow">
+            <div id="Navbar"></div>
 
-  <script type="text/javascript" src="VizGrimoireJS/lib/jquery-1.7.1.min.js"></script>
-  <script type="text/javascript" src="VizGrimoireJS/bootstrap/js/bootstrap.js"></script>
-  <script type="text/javascript" src="VizGrimoireJS/vizgrimoire.min.js"></script>
-</body>
+            <div class="row-fluid">
+
+                <!-- summary -->
+                <div class="span2">
+                    <div class="FilterItemSummary" data-data-source="scm"
+                         data-filter="countries"></div>
+                </div>
+                <!-- end summary -->
+
+                <div class="span7">
+                    <div class="row-fluid">
+                        <div class="FilterItemMetricsEvol" data-data-source="scm"
+                             data-metrics="scm_commits" data-filter="countries"
+                             data-legend="false" data-help="false"></div>
+                        <i><b>Commits per month</b></i>
+                        <a href="notes.html#note:charts:countries:commits"><img src="qm_15.png"></a>
+                    </div>
+
+                    <div class="row-fluid">
+                        <div class="FilterItemMetricsEvol" data-data-source="scm"
+                             data-metrics="scm_authors" data-filter="countries"
+                             data-legend="false" data-help="false"></div>
+                        <i><b>Authors per month</b></i>
+                        <a href="notes.html#note:charts:countries:authors"><img src="qm_15.png"></a>
+                    </div>
+                </div>
+            </div>
+
+            <footer>
+                <div id="Footer"></div>
+            </footer>
+        </div>
+
+        <script type="text/javascript" src="VizGrimoireJS/lib/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="VizGrimoireJS/bootstrap/js/bootstrap.js"></script>
+        <script type="text/javascript" src="VizGrimoireJS/vizgrimoire2.min.js"></script>
+    </body>
 </html>
