--- a/browser/navbar.html
+++ b/browser/navbar.html
@@ -50,14 +50,14 @@
               <li><a href="scr.html">basic</a></li> 
               <li><a href="scr-repos.html">Repositories</a></li> 
           </ul>
-         </li>
+         </li>-->
          <li class="dropdown irc-menu">
           <a class="dropdown-toggle" data-toggle="dropdown" href="">IRC <b class="caret"></b></a>
           <ul class="dropdown-menu">
               <li><a href="irc.html">basic</a></li>
-              <li><a href="irc-repos.html">Repositories</a></li> 
+              <li><a href="irc-repos.html">by channels</a></li> 
           </ul>
-         </li>--> 
+         </li>
          <li class="dropdown studies-menu">        
          <a class="dropdown-toggle" data-toggle="dropdown" href="">Studies<b class="caret"></b></a>
          <ul class="dropdown-menu">
