--- a/browser/navbar.html
+++ b/browser/navbar.html
@@ -24,6 +24,7 @@
               <!--<li><a href="scm-countries.html">by countries</a></li>-->
               <li><a href="scm-repos.html">by repositories</a></li>
               <!--<li><a href="scm-companies-summary.html">by companies summary</a></li>-->
+              <li><a href="scm-contributors.html">contributors</a></li>
           </ul>
          </li>
 <!--     <li class="dropdown its-menu">
@@ -42,6 +43,7 @@
               <!--<li><a href="mls-companies.html">by companies</a></li>-->
               <!--<li><a href="mls-countries.html">by countries</a></li>-->
               <li><a href="mls-repos.html">by mailing lists</a></li>
+              <li><a href="mls-contributors.html">participants</a></li>
           </ul>                                   
          </li>
 <!--         <li class="dropdown scr-menu">
@@ -56,6 +58,7 @@
           <ul class="dropdown-menu">
               <li><a href="irc.html">basic</a></li>
               <li><a href="irc-repos.html">by channels</a></li> 
+              <li><a href="irc-contributors.html">participants</a></li>
           </ul>
          </li>
          <li class="dropdown studies-menu">        
