--- a/browser/mls.html
+++ b/browser/mls.html
@@ -108,7 +108,7 @@
 
                     <!-- top senders -->
                     <div class="Top" data-data-source="mls" data-period="last month"
-                         data-metric="senders" data-limit="10"
+                         data-metric="senders" data-limit="9"
                          data-people_links="false" ></div>
                     <!-- end senders-->
 
@@ -122,9 +122,9 @@
             <div class="row-fluid">
                 <div class="span6">
                     <div class="well">
-                        <h4>Time to Attention of Messages</h4>
+                        <h4>Time to Attention of Messages (median in hours) </h4>
                         <div class="TimeTo" data-data-source="mls" data-type="attention"
-                             data-quantil="X0.99,X0.95,X0.5,X0.25"></div>
+                             data-quantil="X0.95,X0.5"></div>
                     </div>
                 </div>
                 <div class="span6"></div>
