--- a/browser/irc.html
+++ b/browser/irc.html
@@ -99,7 +99,7 @@
                             </table>
                         </div>                        
                     </div>
-                    <div class="Top" data-data-source="irc" data-period="last month" data-limit="9"></div>
+                    <div class="Top" data-data-source="irc" data-period="last month" data-limit="9" data-people_links="false"></div>
                 </div>
                 <!-- end top senders -->
 
