--- a/browser/scm.html
+++ b/browser/scm.html
@@ -107,8 +107,7 @@
                     
                     <!-- top authors -->
                     <div class="Top" data-data-source="scm" data-period="last month"
-                         data-metric="authors" data-limit="9"
-                         data-people_links="true" ></div>
+                         data-metric="authors" data-limit="9" data-people_links="false"></div>
                     <!-- end top authors -->
 
                 </div>
