--- a/browser/navbar.html
+++ b/browser/navbar.html
@@ -27,15 +27,15 @@
               <li><a href="scm-contributors.html">contributors</a></li>
           </ul>
          </li>
-<!--     <li class="dropdown its-menu">
+     <li class="dropdown its-menu">
           <a class="dropdown-toggle" data-toggle="dropdown" href="">Tickets <b class="caret"></b></a>
           <ul class="dropdown-menu">
               <li><a href="its.html">basic</a></li> 
-              <li><a href="its-companies.html">by companies</a></li>
-              <li><a href="its-countries.html">by countries</a></li>
+              <!--<li><a href="its-companies.html">by companies</a></li>
+              <li><a href="its-countries.html">by countries</a></li>-->
               <li><a href="its-repos.html">by repositories</a></li>
           </ul>                   
-         </li> -->
+         </li> 
          <li class="dropdown mls-menu">
           <a class="dropdown-toggle" data-toggle="dropdown" href="">Mailing <b class="caret"></b></a>
           <ul class="dropdown-menu">
