Updated all browser to last product version: VizJS 2.3 and VizJS-lib 2.2

--- a/browser/irc-contributors.html
+++ b/browser/irc-contributors.html
@@ -32,14 +32,14 @@
 
                <div class="row-fluid">
                 	<div class="span4">                         
-                		<div class="Top" data-data-source="irc" data-metric="senders" data-period="last month" data-limit="100" data-people_links="false"></div>
+                		<div class="Top" data-data-source="irc" data-metric="senders" data-period="last month" data-limit="100" data-people_links="true"></div>
                 	</div>
                  
                	<div class="span4">                         
-                		<div class="Top" data-data-source="irc" data-metric="senders" data-period="last year" data-limit="100" data-people_links="false"></div>
+                		<div class="Top" data-data-source="irc" data-metric="senders" data-period="last year" data-limit="100" data-people_links="true"></div>
                 	</div>
                 	<div class="span4">
-                		<div class="Top" data-data-source="irc" data-metric="senders" data-period="" data-limit="100" data-people_links="false"></div>
+                		<div class="Top" data-data-source="irc" data-metric="senders" data-period="" data-limit="100" data-people_links="true"></div>
                 	</div>
 					</div>
                    
@@ -60,6 +60,6 @@
 
         <script type="text/javascript" src="VizGrimoireJS/lib/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="VizGrimoireJS/bootstrap/js/bootstrap.js"></script>
-        <script type="text/javascript" src="VizGrimoireJS/vizgrimoire2.min.js"></script>        
+        <script type="text/javascript" src="VizGrimoireJS/vizgrimoire.min.js"></script>        
     </body>
 </html>
