--- a/browser/mls.html
+++ b/browser/mls.html
@@ -7,7 +7,7 @@
         <title></title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" id="theme"
-              href="VizGrimoireJS/vizgrimoire2.css"/>
+              href="VizGrimoireJS/vizgrimoire.css"/>
         <link href="VizGrimoireJS/bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <link rel="stylesheet" type="text/css" href="custom.css"/>
         <link href="VizGrimoireJS/bootstrap/css/bootstrap-responsive.css"
@@ -109,7 +109,7 @@
                     <!-- top senders -->
                     <div class="Top" data-data-source="mls" data-period="last month"
                          data-metric="senders" data-limit="9"
-                         data-people_links="false" ></div>
+                         data-people_links="true" ></div>
                     <!-- end senders-->
 
                 </div>
@@ -122,7 +122,8 @@
             <div class="row-fluid">
                 <div class="span6">
                     <div class="well">
-                        <h4>Time to Attention of Messages (median in hours) </h4>
+                        <h4>Time to Attention of Messages</h4>
+                        * (in hours)
                         <div class="TimeTo" data-data-source="mls" data-type="attention"
                              data-quantil="X0.95,X0.5"></div>
                     </div>
@@ -144,6 +145,6 @@
 
         <script type="text/javascript" src="VizGrimoireJS/lib/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="VizGrimoireJS/bootstrap/js/bootstrap.js"></script>
-        <script type="text/javascript" src="VizGrimoireJS/vizgrimoire2.min.js"></script>
+        <script type="text/javascript" src="VizGrimoireJS/vizgrimoire.min.js"></script>
     </body>
 </html>
