Add new page for database dumps

--- a/browser/project-card.html
+++ b/browser/project-card.html
@@ -24,7 +24,7 @@
   </div><!--span3-->
 
   <div class="span4">
-    <a href="data/db">MySQL database dumps</a> with the complete retrieved
+    <a href="db.html">MySQL database dumps</a> with the complete retrieved
     datasets <br> <a href="data/json">JSON files</a> (<a href="data/json.tgz">archive</a>) serving the data shown
     in the plots <span id="blogEntry"></span>
   </div><!--span3-->  
