Enable people links and increase people list

--- a/browser/navbar.html
+++ b/browser/navbar.html
@@ -34,6 +34,7 @@
               <!--<li><a href="its-companies.html">by companies</a></li>
               <li><a href="its-countries.html">by countries</a></li>-->
               <li><a href="its-repos.html">by repositories</a></li>
+				  <li><a href="its-contributors.html">contributors</a></li>
           </ul>                   
          </li> 
          <li class="dropdown mls-menu">
