Change parameter for irc channels chart

--- a/browser/irc-repos.html
+++ b/browser/irc-repos.html
@@ -33,7 +33,7 @@
                         <b>Active Channels per month</b>
                     </i>
                     <div class="MetricsEvol" data-data-source="irc"
-                         data-metrics="irc_channels" data-legend="false" style="height: 80px;"></div>
+                         data-metrics="irc_repositories" data-legend="false" style="height: 80px;"></div>
                 </div>
             </div>
             <!-- end info text -->           
