Enable links for list of active contributors

--- a/browser/its.html
+++ b/browser/its.html
@@ -115,7 +115,7 @@
 
         <!-- top closers -->
         <div class="Top" data-data-source="its" data-graph1="bars"
-          data-metric="closers" data-limit="10" data-people_links="false"></div>
+          data-metric="closers" data-limit="10" data-people_links="true"></div>
         <!-- end closers-->
       </div>
       <!-- end right column -->
