--- a/browser/mls.html
+++ b/browser/mls.html
@@ -108,8 +108,8 @@
 
                     <!-- top senders -->
                     <div class="Top" data-data-source="mls" data-period="last month"
-                         data-metric="senders" data-limit="9"
-                         data-people_links="false" ></div>
+                         data-metric="senders" data-limit="10"
+                         data-people_links="true" ></div>
                     <!-- end senders-->
 
                 </div>
