--- a/browser/index.html
+++ b/browser/index.html
@@ -88,7 +88,7 @@
 
             <div class="row-fluid" style="padding: 5px 0px 0px 0px;">
               <div class="span4">
-                <div class="row-fluid thin-border">
+                <div class="row-fluid thin-border medium-text">
                   <div class="span12">Core</div>
                 </div>
                 <div class="row-fluid">
@@ -101,7 +101,7 @@
               </div>
 
               <div class="span4">
-                <div class="row-fluid thin-border">
+                <div class="row-fluid thin-border medium-text">
                   <div class="span12">Regular</div>
                 </div>
                 <div class="row-fluid">
@@ -114,7 +114,7 @@
               </div>
 
               <div class="span4">
-                <div class="row-fluid thin-border">
+                <div class="row-fluid thin-border medium-text">
                   <div class="span12">Occasional</div>
                 </div>
                 <div class="row-fluid">
@@ -173,7 +173,7 @@
             </div>
             <div class="row-fluid" style="padding: 5px 0px 0px 0px;">
               <div class="span6">
-                <div class="row-fluid thin-border">
+                <div class="row-fluid thin-border medium-text">
                   <div class="span12">Fixers</div>
                 </div>
                 <div class="row-fluid">
@@ -185,7 +185,7 @@
                 </div>
               </div>
               <div class="span6">
-                <div class="row-fluid thin-border">
+                <div class="row-fluid thin-border medium-text">
                   <div class="span12">Submitters</div>
                 </div>
                 <div class="row-fluid">
@@ -243,7 +243,7 @@
             </div>
             <div class="row-fluid" style="padding: 5px 0px 0px 0px;">
               <div class="span6">
-                <div class="row-fluid thin-border">
+                <div class="row-fluid thin-border medium-text">
                   <div class="span12">Thread Initiators</div>
                 </div>
                 <div class="row-fluid">
@@ -255,7 +255,7 @@
                 </div>
               </div>
               <div class="span6">
-                <div class="row-fluid thin-border">
+                <div class="row-fluid thin-border medium-text">
                   <div class="span12">First Repliers</div>
                 </div>
                 <div class="row-fluid">
