--- a/browser/its-contributors.html
+++ b/browser/its-contributors.html
@@ -13,6 +13,7 @@
         <link href="VizGrimoireJS/bootstrap/css/bootstrap-responsive.css"
               rel="stylesheet"/>
         <link rel="shortcut icon" href="favicon.png"/>
+<link rel="stylesheet" href="VizGrimoireJS/awesome/css/font-awesome.min.css">
     </head>
 
     <body>
