--- a/browser/navbar.html
+++ b/browser/navbar.html
@@ -68,6 +68,12 @@
               <li><a href="qaforums.html">basic</a></li>
               <li><a href="qaforums-contributors.html">participants</a></li>
             </ul></li>
+         <li class="dropdown forge-menu"><a class="dropdown-toggle"
+            data-toggle="dropdown" href="">Forge <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="forge.html">basic</a></li>
+              <li><a href="forge-contributors.html">participants</a></li>
+            </ul></li>
          <li class="dropdown studies-menu">        
          <a class="dropdown-toggle" data-toggle="dropdown" href="">Studies<b class="caret"></b></a>
          <ul class="dropdown-menu">
