Update people page

--- a/browser/people.html
+++ b/browser/people.html
@@ -79,6 +79,16 @@
               data-metrics="revisions" data-legend="true"></div>
           </div>
         </div>
+        <div class="row-fluid">
+          <div class="span2">
+            <div class="PersonSummary" data-data-source="releases"></div>
+          </div>
+          <div class="span10">
+            <div class="PersonMetrics" data-data-source="releases"
+              data-metrics="releases_releases" data-legend="true"></div>
+          </div>
+        </div>
+
       </div>
     </div>
 
