Disable link to forge personal pages

--- a/browser/forge.html
+++ b/browser/forge.html
@@ -124,7 +124,7 @@
                     <!-- top senders -->
                     <div class="Top" data-data-source="releases" data-period_all="true"
                          data-metric="authors" data-limit="10"
-                         data-people_links="true" ></div>
+                         data-people_links="false" ></div>
                     <!-- end senders-->
 
                 </div>
