HTML updated based on client's comments

--- a/browser/qaforums.html
+++ b/browser/qaforums.html
@@ -90,6 +90,15 @@
                                 <tr>
                                     <td>
                                         <span class="GlobalData" data-data-source="qaforums"
+                                              data-field="qaforums_participants"></span>
+                                    </td>
+                                    <td>
+                                        participants (all time)
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <span class="GlobalData" data-data-source="qaforums"
                                               data-field="qaforums_qsenders"></span>
                                     </td>
                                     <td>
@@ -114,6 +123,15 @@
                         </div>
                         <div class="span6">
                             <table class="table table-striped">
+                                <tr>
+                                    <td>
+                                        <span class="GlobalData" data-data-source="qaforums"
+                                              data-field="qaforums_participants_30"></span>
+                                    </td>
+                                    <td>
+                                        participants (last month)
+                                    </td>
+                                </tr>
                                 <tr>
                                     <td>
                                         <span class="GlobalData"
