Change metric name for participants in QAForums

--- a/browser/qaforums.html
+++ b/browser/qaforums.html
@@ -90,7 +90,7 @@
                                 <tr>
                                     <td>
                                         <span class="GlobalData" data-data-source="qaforums"
-                                              data-field="qaforums_participants"></span>
+                                              data-field="participants"></span>
                                     </td>
                                     <td>
                                         participants (all time)
@@ -126,7 +126,7 @@
                                 <tr>
                                     <td>
                                         <span class="GlobalData" data-data-source="qaforums"
-                                              data-field="qaforums_participants_30"></span>
+                                              data-field="participants_30"></span>
                                     </td>
                                     <td>
                                         participants (last month)
