--- a/browser/index.html
+++ b/browser/index.html
@@ -345,7 +345,7 @@
                 <div class="row-fluid grey-border">
                   <div class="span12 big-fp-number">
                     <a href="qaforums.html"> <span class="GlobalData"
-                                                   data-data-source="qaforums" data-field="qaforums_participants"></span>
+                                                   data-data-source="qaforums" data-field="participants"></span>
                     </a>
                   </div>
                 </div>
