--- a/browser/qaforums-contributors.html
+++ b/browser/qaforums-contributors.html
@@ -25,9 +25,9 @@
         
         <div class="span12">
           <div class="well">
-            <div class="MetricsEvol" data-data-source="qaforums" data-metrics="qaforums_participants"
+            <div class="MetricsEvol" data-data-source="qaforums" data-metrics="participants"
                  data-min="true" style="height:120px;" data-frame-time="true"></div>
-            <div class="MicrodashText" data-metric="qaforums_participants"></div>
+            <div class="MicrodashText" data-metric="participants"></div>
           </div>
         </div>
 
