--- a/browser/wiki-contributors.html
+++ b/browser/wiki-contributors.html
@@ -32,37 +32,32 @@
 
       <!-- Section HTML will be placed here, do not modify manually -->
       <!-- REPLACE SECTION HTML -->
-      <div class="OverallSummaryBlock"></div>
+      <!-- commits, authors, stats, top authors -->
+<div class="row">
+  <div class="col-md-12">
+    <div class="well">
+      <div class="MetricsEvol" data-data-source="mediawiki" data-metrics="mediawiki_authors"
+           data-min="true" style="height:120px;"></div>
+      <div class="MicrodashText" data-metric="mediawiki_authors"></div>
+    </div>
+  </div>
+</div>
+<div class="row"><div class="col-md-12"><div class="well">
+<div class="row">
+  <div class="col-md-4">                         
+    <div class="Top" data-data-source="mediawiki" data-metric="authors" data-period="last month" data-limit="100" data-people_links="true"></div>
+  </div>
+  
+  <div class="col-md-4">                         
+    <div class="Top" data-data-source="mediawiki" data-metric="authors" data-period="last year" data-limit="100" data-people_links="true"></div>
+  </div>
+  <div class="col-md-4">
+    <div class="Top" data-data-source="mediawiki" data-metric="authors" data-period="" data-limit="100" data-people_links="true"></div>
+  </div>
+</div>
+</div></div></div>
 
-<div class="DSSummaryBlock" data-data-source="scm"
-     data-box-labels="Code Developers,Core,Regular,Casual"
-     data-box-metrics="scm_authors,core,regular,occasional"
-     data-ts-metrics="scm_commits,scm_authors"></div>
-
-<div class="DSSummaryBlock" data-data-source="scr"
-     data-box-labels="Code Submitters,Accepted Contributions"
-     data-box-metrics="scr_submitters,scr_merged"
-     data-ts-metrics="scr_merged,scr_submitters"></div>
-
-<div class="DSSummaryBlock" data-data-source="its"
-     data-box-labels="Ticket Participants,Fixers,Submitters"
-     data-box-metrics="allhistory_participants,its_closers,its_openers"
-     data-ts-metrics="its_closed,its_closers"></div>
-
-<div class="DSSummaryBlock" data-data-source="mls"
-     data-box-labels="Discussion Participants,Thread Initiators,First Repliers"
-     data-box-metrics="mls_senders,senders_init,senders_response"
-     data-ts-metrics="mls_sent,mls_senders"></div>
-
-<div class="DSSummaryBlock" data-data-source="qaforums"
-     data-box-labels="Participants,Questions"
-     data-box-metrics="qaforums_participants,qaforums_qsent"
-     data-ts-metrics="qaforums_qsent,qaforums_qsenders"></div>
-
-<div class="DSSummaryBlock" data-data-source="irc"
-     data-box-labels="IRC Participants, IRC Messages"
-     data-box-metrics="irc_senders,irc_sent"
-     data-ts-metrics="irc_sent,irc_senders"></div>
+<!-- end files, lines -->
 
 
       <!-- END SECTION  HTML-->
