--- a/browser/its.html
+++ b/browser/its.html
@@ -44,9 +44,7 @@
         <div class="well">
           <div class="MetricsEvol" data-data-source="its"
                data-metrics="its_closed,its_opened" data-min="true"
-               style="height: 160px;" data-legend="true"
-	       data-frame-time="true"
-	       ></div>
+               style="height: 160px;" data-legend="true"></div>
           <div class="MicrodashText" data-metric="its_closed" data-name="true"></div>
         </div>
       </div>
@@ -59,9 +57,7 @@
         <div class="well">
           <div class="MetricsEvol" data-data-source="its"
                data-metrics="its_closers" data-min="true"
-               style="height: 120px;" data-title="People closing tickets"
-	       data-frame-time="true"
-	       ></div>
+               style="height: 120px;" data-title="People closing tickets"></div>
           <div class="MicrodashText" data-metric="its_closers"></div>
         </div>
       </div>
@@ -74,9 +70,7 @@
         <div class="well">
           <div class="MetricsEvol" data-data-source="its"
                data-metrics="its_openers" data-min="true"
-               style="height: 120px;" data-title="People submitting tickets"
-	       data-frame-time="true"
-	       ></div>
+               style="height: 120px;" data-title="People submitting tickets"></div>
           <div class="MicrodashText" data-metric="its_openers"></div>
         </div>
       </div>
