--- a/browser/qaforums-contributors.html
+++ b/browser/qaforums-contributors.html
@@ -46,7 +46,7 @@
 <div class="row"><div class="col-md-12"><div class="well">
 <div class="row">
   <div class="col-md-4">                         
-    <div class="Top" data-data-source="qaforums" data-metric="participants" data-period_all="true" data-limit="100" data-people_links="true"></div>
+    <div class="Top" data-data-source="qaforums" data-metric="senders" data-period_all="true" data-limit="100" data-people_links="true"></div>
   </div>
   
   <div class="col-md-4">                         
